Fix Hero Title Alignment

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -366,7 +366,7 @@
             }
 
             &-text-container {
-                top: 28%;
+                top: 75vw;
             }
         }
     }
